--- a/src/App.css
+++ b/src/App.css
@@ -304,6 +304,11 @@ li a:hover {
   width: 5%;
 }
 
+.coll-4{
+  display:flex;
+  flex-direction: column;
+}
+
 .mycalendar {
   justify-content: center;
   display: flex;
